[package]
name = "nali-rs"
version = "0.0.1"
edition = "2024"
authors = ["kingcanfish"]
description = "一个查询IP地理信息和CDN提供商的离线终端工具 - Rust实现"
license = "MIT"
repository = "https://github.com/zu1k/nali"
homepage = "https://github.com/zu1k/nali"
keywords = ["ip", "geolocation", "cdn", "cli", "offline"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Data types and utilities
ipnetwork = "0.20"
regex = "1.12"
once_cell = "1.21"
dirs = "5.0"
atty = "0.2"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# HTTP client for downloading databases
reqwest = { version = "0.11", features = ["stream", "socks"] }
futures-util = "0.3"
indicatif = "0.17"

# Database and file handling
memmap2 = "0.9"
csv = "1.4"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
maxminddb = "0.24"
sevenz-rust = "0.6"

# Color and output
colored = { version = "3", optional = true }

# Encoding and localization
unic-langid = { version = "0.9", features = ["serde"] }

# Testing
[dev-dependencies]
tempfile = "3.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "nali-rs"
path = "src/main.rs"

[features]
default = ["colored-output"]
colored-output = ["colored"]
